# openclaw

./: BOT_TASKS.md  BOUNDARIES.md  DEV_AGENT.md  DOD.md  HEARTBEAT.md  NIGHT_TASKS.md  README_SCRAPING.md  SOUL.md  TOOLS.md  extract_posts.js  memory.md  metalslime_2025_2026_full.json  metalslime_api_scrape.cjs  metalslime_batch.cjs  metalslime_complete.cjs  metalslime_full_scrape.cjs  metalslime_grab.cjs  metalslime_parser.js  metalslime_playwright.cjs  metalslime_playwright_scrape.cjs  metalslime_puppeteer.js  metalslime_scrape.js  metalslime_scrape_progress.json  metalslime_scraper.js  package-lock.json
TODO/: AI独立贡献者落地_2026-02-01.md  AfternoonResearchReport每日研究简报_2026-02-03.md  Android_USB_MCP开发报告_2026-02-05.md  Android_USB控制开发计划_2026-02-05.md  Chroma向量知识库调研_2026-02-03.md  EverythingClaudeCode安装配置_2026-02-03.md  GoogleCalendar集成_2026-02-04.md  HunyuanVL模型迁移主分支_2026-02-02.md  Monday-TODO自动化扫描_2026-02-04.md  Monday-TODO自动化扫描_完成报告_2026-02-04.md  MorningBrief每日早间简报系统_2026-02-03.md  PaddleSpeech语音转文字_2026-02-02.md  ProactiveCoder主动编码工作流_2026-02-03.md  README.md  Reddit_JSON_Hack开发计划_2026-02-05.md  T030_T024_开发计划_2026-02-03.md  T077_git_diagnosis.md  T078_gateway_restart.md  TransformerVisionLanguage开发规范_2026-02-02.md  index.csv  (+32 more)
skills/opencode-team/: .gitignore  README.md  SKILL.md  _meta.json  pyproject.toml
skills/opencode-team/assets/: com.opencode-team.plist.template  setup.sh
skills/opencode-team/src/opencode_team_mcp/: __init__.py  __main__.py  server.py
skills/opencode-team/tests/: README.md  __init__.py  conftest.py  test_mcp_tools.py  test_server.py
(+176 files in other folders)
