[project]
name = "opencode-team"
version = "0.1.0"
description = "MCP server for orchestrating multiple Claude Code workers via iTerm2"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "iterm2>=2.0.0",
    "psutil>=5.9.0",
    "python-dateutil>=2.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_team_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
